<resources>
    <string name="app_name">MS Code Challenge Aug \'21</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_creation_fragment_label">Profile Creation Fragment</string>
    <string name="confirmation_fragment_label">Confirmation Fragment</string>

    <string name="confirmation_description">Your super-awesome portfolio has been successfully submitted! The details below will be public within your community!</string>
    <string name="email_already_in_db">Email already in database!</string>
    <string name="hello">Hello!</string>
    <string name="hello_with_name">Hello, %s!</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_website">Website</string>
    <string name="invalid_email_and_password_combination">Invalid email and password combination!</string>
    <string name="invalid_empty_fields">Email and password cannot be empty!</string>
    <string name="not_implemented">Not implemented, yet ;)</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="profile_creation_description">Use the form below to submit your portfolio. \nAn email and password are required.</string>
    <string name="return_to_profile_creation">Return to profile creation</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">Existing users please authenticate.</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="submit">Submit</string>
</resources>