<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_margin"
    tools:context=".ProfileCreationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_creation"
        android:textStyle="bold"
        android:paddingBottom="@dimen/basic_padding"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subheader_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_creation_description"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/hint_first_name"
        android:layout_marginVertical="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/subheader_text"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="@id/subheader_text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_email_address"
        android:layout_marginVertical="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="@id/subheader_text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:layout_marginVertical="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="@id/subheader_text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/website_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_website"
        android:layout_marginVertical="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/password_edit"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="@id/subheader_text"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>