<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_margin"
    tools:context=".ConfirmationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingBottom="@dimen/basic_padding"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/subheader_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/hello"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subheader_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_description"
        app:layout_constraintTop_toBottomOf="@id/greeting_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/website_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        app:layout_constraintTop_toBottomOf="@id/subheader_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.AppCompat.Body2"
        tools:text="mycoolsite.com"
        tools:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        app:layout_constraintTop_toBottomOf="@id/website_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.AppCompat.Body2"
        tools:text="John Doe"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        app:layout_constraintTop_toBottomOf="@id/name_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.AppCompat.Body2"
        tools:text="My email"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/basic_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>